<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="account">Account</string>
    <string name="account_lbl">Account:</string>
    <string name="add_autoforward">Add new autoforward</string>
    <string name="add_watermark_to_images">Add watermark to images</string>
    <string name="alipay">Alipay</string>
    <string name="all">All</string>
    <string name="app_name">WechatForwarder</string>
    <string name="article">Article</string>
    <string name="autoforward">Auto forward to friends</string>
    <string name="autoforward_delay">Autoforward delay (s)</string>
    <string name="autoresend_delay">Autoresend delay</string>
    <string name="autoresend_max">Autoresend max</string>
    <string name="bottom_left">Bottom left</string>
    <string name="bottom_right">Bottom right</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="click_to_select">Click to select</string>
    <string name="cloud_storage">Click here to browse my &lt;b>cloud storage&lt;/b></string>
    <string name="config_autoforward">Configure autoforward</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="customize_sight">Customize sight</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="disable_contentprovider">Disable contentprovider (some functions will not work)</string>
    <string name="dont_disable_contentprovider">"No account data fount, don't disable contentprovider and enter Wechat first then come back!"</string>
    <string name="enable">Enable</string>
    <string name="enable_autoforward">Enable autoforward to friends</string>
    <string name="enable_autoresend">Enable autoresend</string>
    <string name="enable_combined_record_forward_to_moments">Enable combined record forward to moments</string>
    <string name="enable_forward_broadcast">Enable forward to Broadcast Messages</string>
    <string name="enable_forward_chat">Enable forward chat to Moments</string>
    <string name="enable_forward_favorite">Enable forward favorite</string>
    <string name="enable_forward_friendcard_to_friends">Enable forward friendcard to friends</string>
    <string name="enable_forward_moments_images_to_friends">Enable forward moments image(s) to friends</string>
    <string name="enable_forward_moments_to_moments">Enable forward moments to moments</string>
    <string name="enable_forward_multiple_images_to_moments">Enable forward multiple images in chat to moments (max. 9)</string>
    <string name="enable_forward_multiple_voices_to_friends">Enable forward multiple voice messages to friends</string>
    <string name="enable_forward_voice_to_friends">Enable forward voiceMsg message to friends</string>
    <string name="enable_image_auto_download_moments_image_forwarding">Enable image auto download (moments image forwarding)</string>
    <string name="enble_sight_duration">Enable custom sight duration</string>
    <string name="enble_voice_duration">Enable custom voice duration</string>
    <string name="experimental">Experimental</string>
    <string name="forward">Forward</string>
    <string name="forward_chat_to_sns">Forward to moments</string>
    <string name="forward_images_to_sns">Forward images to moments</string>
    <string name="forward_img_to_friends">Forward image(s) to friends</string>
    <string name="forward_to_friends">Forward to friends</string>
    <string name="forward_to_moments">Forward to moments</string>
    <string name="forward_to_others">Other forwards</string>
    <string name="forward_voices_to_friend">Forward voice message(s) to friends</string>
    <string name="friendcard">Friend card</string>
    <string name="friends">Friends</string>
    <string name="gen_code">fetching installation code…</string>
    <string name="hide_icon">Hide launcher icon</string>
    <string name="image">Image</string>
    <string name="img_null">If the image is not loaded properly, please preview it first.</string>
    <string name="img_transparency">Image transparency</string>
    <string name="input_watermark_text">input watermark text</string>
    <string name="installation_code">Installation code</string>
    <string name="invalid">INVALID</string>
    <string name="lauching_program">Launching app, please wait…</string>
    <string name="license_key">License key</string>
    <string name="loading_img">Loading image(s), please wait …</string>
    <string name="loading_video">Loading video, please wait …</string>
    <string name="mass_send">Broadcast Messages</string>
    <string name="members">Target:</string>
    <string name="members_lbl">Member(s):</string>
    <string name="misc">Misc.</string>
    <string name="modify">Modify</string>
    <string name="multi_broadcast_forward_enable">Enable forward multiple messages to Broadcast Messages</string>
    <string name="need_reboot">Will be effective after reboot!</string>
    <string name="no_account">No account data found, please first enter Wechat then come back.</string>
    <string name="paid">PAID</string>
    <string name="please_select_source">Please select source first</string>
    <string name="search_here">Search here</string>
    <string name="seconds">(s)</string>
    <string name="select_image">Select image</string>
    <string name="select_img_preview">Select preview</string>
    <string name="select_source">Select source</string>
    <string name="select_target">Select target</string>
    <string name="selected">Selected: %s</string>
    <string name="selective_copy">Selective copy</string>
    <string name="selective_copy_enable">Enable selective copy</string>
    <string name="set_color">set color</string>
    <string name="set_watermark">Set watermark</string>
    <string name="share">Share</string>
    <string name="show_icon">Show launcher icon</string>
    <string name="show_image_download_progress">Show image download progress</string>
    <string name="sight_duration">Sight duration (seconds)</string>
    <string name="sns_forward_not_supported">Forwarding this type of data is not supported!</string>
    <string name="sns_share_not_supported">Sharing this type of data is not supported!</string>
    <string name="source_lbl">Source:</string>
    <string name="support">&lt;b>Click on the app name in the list to donate.&lt;/b></string>
    <string name="support2">This app is provided free for personal use. Please do not resell, forward ads or any other commercially related activities. &lt;b>If you like my work please support me, click here&lt;/b></string>
    <string name="sync_avatar">Enable auto sync avatar</string>
    <string name="sync_contacts">Enable auto sync contacts (can be disabled when sync complete)</string>
    <string name="text">Text</string>
    <string name="text_size">Text size</string>
    <string name="time_format" formatted="false">%d day(s) %d hour(s) %d minute(s)</string>
    <string name="timetrial">TIMETRIAL</string>
    <string name="timetrial_expired">TIMETRIAL EXPIRED</string>
    <string name="title_activity_auto_forward">AutoForward</string>
    <string name="top_left">Top left</string>
    <string name="top_right">Top right</string>
    <string name="types">Types:</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="update_img_preview">Update preview</string>
    <string name="version_warning">Incompatible Wechat version detected!</string>
    <string name="video">Video</string>
    <string name="video_too_large">Video size is too large (%s), forwarding might fail!</string>
    <string name="voice">Voice</string>
    <string name="voice_duration">Voice duration (s)</string>
    <string name="voice_forward_success">Voice message(s) successfully forwarded to</string>
    <string name="voice_length">Voice length (s)</string>
    <string name="voice_time_left">%d seconds left</string>
    <string name="voice_wrong_length_enable">Enable Reporting wrong voice length</string>
    <string name="watermark_image">Watermark image</string>
    <string name="watermark_img_place">Watermark image placement</string>
    <string name="watermark_text">Watermark text</string>
    <string name="watermark_text_place">Watermark text placement</string>
    <string name="wechat">Wechat</string>
    <string name="xposed_warning">Xposed framework not installed, click here to search for more information.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="paypal">PayPal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
</resources>
