<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/holo_red_light" android:gravity="center_horizontal" android:id="@id/xposed_warning" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_alignParentTop="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/holo_red_light" android:gravity="center_horizontal" android:id="@id/version_warning" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_below="@id/xposed_warning" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView0" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_below="@id/version_warning" />
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/textView0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward_to_moments" />
            <Switch android:id="@id/chat_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_chat" android:layout_below="@id/textView4" />
            <Switch android:id="@id/sns_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_moments_to_moments" android:layout_below="@id/chat_forward_enable" />
            <Switch android:id="@id/multi_image_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_multiple_images_to_moments" android:layout_below="@id/sns_forward_enable" />
            <Switch android:id="@id/record_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_combined_record_forward_to_moments" android:layout_below="@id/multi_image_forward_enable" />
            <Switch android:id="@id/img_autodownload_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_image_auto_download_moments_image_forwarding" android:layout_below="@id/record_forward_enable" />
            <Switch android:id="@id/show_img_progress" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show_image_download_progress" android:layout_below="@id/img_autodownload_enable" />
            <Switch android:id="@id/add_img_watermark" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_watermark_to_images" android:layout_below="@id/show_img_progress" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/config_img_watermark" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_watermark" android:layout_below="@id/add_img_watermark" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward_to_friends" android:layout_below="@id/config_img_watermark" />
            <Switch android:id="@id/voice_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_voice_to_friends" android:layout_below="@id/textView7" />
            <Switch android:id="@id/multi_voice_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_multiple_voices_to_friends" android:layout_below="@id/voice_forward_enable" />
            <Switch android:id="@id/friendcard_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_friendcard_to_friends" android:layout_below="@id/multi_voice_forward_enable" />
            <Switch android:id="@id/img_to_friend_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_moments_images_to_friends" android:layout_below="@id/friendcard_forward_enable" />
            <Switch android:id="@id/broadcast_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_broadcast" android:layout_below="@id/img_to_friend_forward_enable" />
            <Switch android:id="@id/multi_broadcast_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/multi_broadcast_forward_enable" android:layout_below="@id/broadcast_forward_enable" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/config_autoforward" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoforward" android:layout_below="@id/multi_broadcast_forward_enable" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward_to_others" android:layout_below="@id/config_autoforward" />
            <Switch android:id="@id/favorite_forward_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_forward_favorite" android:layout_below="@id/textView8" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/misc" android:layout_below="@id/favorite_forward_enable" />
            <Switch android:id="@id/disable_contentprovider" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disable_contentprovider" android:layout_below="@id/textView6" />
            <Switch android:id="@id/selective_copy_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/selective_copy_enable" android:layout_below="@id/disable_contentprovider" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/experimental" android:layout_below="@id/selective_copy_enable" />
            <Switch android:id="@id/sight_duration_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enble_sight_duration" android:layout_below="@id/textView5" />
            <EditText android:gravity="end" android:id="@id/sight_duration" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/seconds" android:ems="5" android:layout_below="@id/sight_duration_enable" android:layout_alignParentRight="true" android:inputType="numberDecimal" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="bottom" android:id="@id/sight_duration_lbl" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sight_duration" android:layout_below="@id/sight_duration_enable" android:layout_alignBottom="@id/sight_duration" android:layout_alignParentLeft="true" />
            <Switch android:id="@id/voice_duration_change_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enble_voice_duration" android:layout_below="@id/sight_duration_lbl" />
            <EditText android:gravity="end" android:id="@id/voice_duration" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/seconds" android:ems="5" android:layout_below="@id/voice_duration_change_enable" android:layout_alignParentRight="true" android:inputType="numberDecimal" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="bottom" android:id="@id/voice_duration_lbl" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_duration" android:layout_below="@id/voice_duration_change_enable" android:layout_alignBottom="@id/voice_duration" android:layout_alignParentLeft="true" />
            <Switch android:id="@id/voice_wrong_length_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/voice_wrong_length_enable" android:layout_below="@id/voice_duration_lbl" />
            <EditText android:gravity="end" android:id="@id/voice_length" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/seconds" android:ems="5" android:layout_below="@id/voice_wrong_length_enable" android:layout_alignParentRight="true" android:inputType="number" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="bottom" android:id="@id/voice_length_lbl" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_length" android:layout_below="@id/voice_wrong_length_enable" android:layout_alignBottom="@id/voice_length" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>