<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="15.0dip" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/watermark_image" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_image" android:layout_below="@id/textView11" android:layout_centerInParent="true" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/button" android:layout_centerInParent="true" android:contentDescription="@string/watermark_image" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/img_transparency" android:layout_below="@id/imageView2" />
            <SeekBar android:layout_gravity="center_horizontal" android:id="@id/seekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/textView12" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/watermark_img_place" android:layout_below="@id/seekBar" android:layout_alignParentLeft="true" />
            <RadioGroup android:orientation="horizontal" android:id="@id/image_place" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/textView14">
                <RadioButton android:gravity="bottom|center" android:id="@id/img_tl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/top_left" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/img_tr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/top_right" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/img_bl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/bottom_left" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/img_br" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/bottom_right" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
            </RadioGroup>
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/watermark_text" android:layout_below="@id/image_place" />
            <EditText android:layout_gravity="center_horizontal" android:id="@id/editText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/input_watermark_text" android:layout_below="@id/textView10" />
            <EditText android:layout_gravity="right" android:id="@id/editText2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="3" android:layout_below="@id/editText" android:layout_alignParentRight="true" android:inputType="number" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size" android:layout_below="@id/editText" android:layout_alignBottom="@id/editText2" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/set_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_color" android:layout_below="@id/editText2" android:layout_centerInParent="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/watermark_text_place" android:layout_below="@id/set_color" android:layout_alignParentLeft="true" />
            <RadioGroup android:orientation="horizontal" android:id="@id/text_place" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/textView15">
                <RadioButton android:gravity="bottom|center" android:id="@id/text_tl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/top_left" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/text_tr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/top_right" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/text_bl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/bottom_left" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
                <RadioButton android:gravity="bottom|center" android:id="@id/text_br" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/bottom_right" android:drawableBottom="?android:listChoiceIndicatorSingle" android:layout_weight="1.0" />
            </RadioGroup>
            <Button android:layout_gravity="start" android:id="@id/select_img_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_img_preview" android:layout_below="@id/text_place" android:layout_alignParentLeft="true" />
            <Button android:layout_gravity="end" android:id="@id/update_img_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_img_preview" android:layout_below="@id/text_place" android:layout_alignParentRight="true" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/select_img_preview" android:layout_centerInParent="true" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>