<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    <RadioGroup android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/contact_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@id/friends" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friends" />
        <RadioButton android:id="@id/chatrooms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chatrooms" />
        <RadioButton android:id="@id/all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/all" />
    </RadioGroup>
    <SearchView android:id="@id/search_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <ListView android:layout_gravity="center_horizontal" android:id="@id/listView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>