<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@id/cv_blacklist_members" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardCornerRadius="2.0dip" card_view:cardElevation="5.0dip" card_view:contentPadding="10.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/account_lbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_lbl" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/account" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@id/account_lbl" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/source_lbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/source_lbl" android:layout_below="@id/account_lbl" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/source" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" android:layout_toRightOf="@id/source_lbl" android:layout_below="@id/account" android:layout_alignBottom="@id/source_lbl" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/targets_lbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/members" android:layout_below="@id/source_lbl" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/targets" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" android:layout_toRightOf="@id/targets_lbl" android:layout_below="@id/source" android:layout_alignBottom="@id/targets_lbl" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/type_lbl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/types" android:layout_below="@id/targets" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/types" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" android:layout_toRightOf="@id/type_lbl" android:layout_below="@id/targets_lbl" android:layout_alignBottom="@id/type_lbl" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>